# AutonomousBot_ROS2

./: .gitignore  DEBUGGING_GUIDE.md  FULL_SYSTEM_TEST.md  JetRacer_ros_code.uf2  LIDAR_TROUBLESHOOTING_GUIDE.md  README.md  ROS_TOPICS_DOCUMENTATION.md  RP2040_MOTOR_CONTROL_PROTOCOL.md  STEP_BY_STEP_LAUNCH.md  SYSTEM_STATUS_COMPLETE.md  WEB_INTERFACE_TESTING.md  launch_complete_system.sh
src/battery_monitor_pkg/: setup.cfg  setup.py
src/battery_monitor_pkg/battery_monitor_pkg/: battery_monitor_node.py  ina219_driver.py
src/battery_monitor_pkg/launch/: battery_monitor.launch.py
src/jetracer_base/: CMakeLists.txt
src/jetracer_base/jetracer_base/: __init__.py
src/jetracer_base/scripts/: rp2040_interface.py  servo_controller.py
src/jetracer_msgs/: CMakeLists.txt
src/jetracer_msgs/msg/: BatteryState.msg  MotorCommand.msg  MotorState.msg  ServoCommand.msg  ServoState.msg  SystemStatus.msg  WheelSpeeds.msg
src/jetracer_msgs/srv/: Calibrate.srv  SetMotorPID.srv
src/motor_control_pkg/: setup.py
src/motor_control_pkg/launch/: motor_control.launch.py
src/motor_control_pkg/motor_control_pkg/: __init__.py  motor_control_node.py  waveshare_interface.py
src/oled_display_pkg/: README.md  setup.cfg  setup.py
src/oled_display_pkg/config/: oled_params.yaml
src/oled_display_pkg/launch/: oled_display.launch.py  oled_with_params.launch.py
src/oled_display_pkg/oled_display_pkg/: ip_utils.py  oled_display_node.py  oled_driver.py
src/web_interface_pkg/: CMakeLists.txt
src/web_interface_pkg/config/: web_interface_params.yaml
src/web_interface_pkg/launch/: jetracer_complete_system.launch.py  web_interface.launch.py
src/web_interface_pkg/scripts/: ros_bridge_node.py  simple_ros_bridge.py  web_server_node.py
src/web_interface_pkg/web/: app.js  index.html  manifest.json  styles.css
src/web_interface_pkg/web/icons/: README.md
